Closure_48/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_48_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_48/Closure/evosuite/3/com/google/javascript/jscomp/TypedScopeCreator_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_48/Closure/evosuite/3/com/google/javascript/jscomp/TypedScopeCreator_ESTest_scaffolding.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_48/Closure/evosuite/3/com/google/javascript/jscomp/TypedScopeCreator_ESTest.java:414: error: cannot find symbol
      typedScopeCreator0.patchGlobalScope(scope0, node0);
                        ^
  symbol:   method patchGlobalScope(Scope,Node)
  location: variable typedScopeCreator0 of type TypedScopeCreator
1 error
